--- a/src/public/styles/main.css
+++ b/src/public/styles/main.css
@@ -1,5 +1,3 @@
-
-
 .cards {
   display: flex;
   justify-content: center;
@@ -24,8 +22,14 @@ h1 {
 }
 
 
-.card-body img { 
+.card-body img {
 
   height: 170px;
   object-fit: cover;
-   }
+}
+
+.cards {
+  max-width: 1200px;
+  margin-left: auto;
+  margin-right: auto;
+}
