--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -15,9 +15,7 @@ html {
 }
 
 .header {
-  /* background-color: #5A5A5A; */
   background-color: #F8F9FA;
-
   height: 80px;
 }
 
@@ -29,10 +27,12 @@ html {
   padding-top: 16px;
 }
 
-
-
 .navbar-brand {
   margin-right: 160px;
+}
+
+.container-fluid {
+  padding: 0%;
 }
 
 .house {
@@ -42,7 +42,7 @@ html {
 }
 
 .favourite {
-  margin-right: 60px;
+  margin-right: 90px;
   color: #5A5A5A !important;
   font-size: 18px;
 }
@@ -95,17 +95,12 @@ html {
   font-size: 18px;
 }
 
-
-h1 {
-  color: #74b7fa;
-  margin-top: 50px;
-}
-
 .filter-back {
   width: 100%;
   height: 60px;
   background: #FFFFFF;
   box-shadow: 0px 15px 25px #0D6EFD40;
+  margin-bottom: 50px;
 }
 
 .form-select {
@@ -123,18 +118,127 @@ h1 {
 }
 
 
-
-
-/* .form-select {
-  border-color: #0EED1740;
-}  */
-
 .form-select:focus,
 .form-select:active {
   box-shadow: none;
   border-color: #0D6EFD40;
 }
 
+.back,
+.index {
+  text-decoration: none;
+  margin-bottom: 10px;
+  color: #0D6EFD;
+}
+
+.container {
+  display: flex;
+  flex-direction: column;
+  max-width: 1200px;
+  margin-bottom: 100px;
+  padding: 0;
+}
+
+.cards {
+  display: flex;
+  justify-content: space-between;
+  flex-direction: row;
+  flex-wrap: wrap;
+  padding: 10px;
+  border: 1px solid #b9b9b9;
+  border-radius: 20px;
+  gap: 20px;
+}
 
 
-/* 5A5A5A */
+.card {
+  border-radius: 20px;
+  border: 1px solid #b9b9b9;
+  max-height: 380px;
+}
+
+
+.card-body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.btn-primary {
+  width: 120px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+
+.card-body img {
+  height: 170px;
+  object-fit: cover;
+}
+
+.card-text {
+  margin-bottom: 5px;
+}
+
+.figure {
+  margin-bottom: 5px;
+}
+
+
+
+/* ////////////////////////////////// */
+
+
+footer {
+  background-color: #F8F9FA;
+  height: 260px;
+  width: 100%;
+  padding: 40px 0 40px 0;
+}
+
+
+.footer-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 1200px;
+  height: 120px;
+  margin-right: auto;
+  margin-left: auto;
+}
+
+.left-block {
+  display: flex;
+  flex-direction: column;
+  color: #5A5A5A;
+  text-decoration: none;
+}
+
+.center-block {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+
+.center-block-a,
+.right-block-a {
+  color: #5A5A5A;
+  text-decoration: none;
+  font-size: 18px;
+  margin-bottom: 15px;
+}
+
+.right-block {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+  color: #5A5A5A;
+  text-decoration: none;
+  margin-top: 20px;
+}
+
+.footer-logo {
+  max-width: 150px;
+  margin-bottom: 15px;
+}
