--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -16,11 +16,28 @@ html {
 
 .header {
   background-color: #F8F9FA;
+  width: 100%;
   height: 80px;
+  position: fixed;
+  z-index: 2000 !important;
+  top: 0;
+
+}
+
+.filter-back {
+  width: 100%;
+  height: 60px;
+  background: #FFFFFF;
+  box-shadow: 0px 15px 25px #0D6EFD40;
+  margin-bottom: 50px;
+  position: fixed;
+  z-index: 1000;
+  margin-top: 80px;
+  top: 0;
 }
 
 .navbar {
-  background-color: #F8F9FA !important;
+  background-color: #F8F9FA;
 }
 
 .nav-big {
@@ -95,14 +112,6 @@ html {
   font-size: 18px;
 }
 
-.filter-back {
-  width: 100%;
-  height: 60px;
-  background: #FFFFFF;
-  box-shadow: 0px 15px 25px #0D6EFD40;
-  margin-bottom: 50px;
-}
-
 .form-select {
   width: 150px;
 }
@@ -137,6 +146,8 @@ html {
   max-width: 1200px;
   margin-bottom: 100px;
   padding: 0;
+  margin-top: 180px;
+
 }
 
 .cards {
