--- a/src/public/css/index.css
+++ b/src/public/css/index.css
@@ -177,11 +177,17 @@ html {
   gap: 20px;
 }
 
-
 .card {
   border-radius: 20px;
   border: 1px solid #b9b9b9;
   max-height: 380px;
+  transition: box-shadow 0.2s, ease-in-out, transform 0.2s ease-in-out;
+}
+
+.card:hover {
+  transition: box-shadow 0.2s ease-in-out, transform 0.2s ease-in-out;
+  box-shadow: 0px 20px 35px #0d6dfd3b;
+  transform: translateY(-5px);
 }
 
 
@@ -278,13 +284,13 @@ footer {
 
 
 .reg-form {
-  margin-top: 80px;
+  margin-top: 60px;
   margin-bottom: auto;
   max-width: 300px;
 }
 
 .login-form {
-  margin-top: 150px;
+  margin-top: 130px;
   margin-bottom: auto;
   max-width: 300px;
 }
@@ -331,7 +337,7 @@ h2 {
 
 
 .list-group-flush {
-  margin-top: 80px;
+  margin-top: 40px;
   max-width: 500px;
 }
 
